# lib-python-config

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
.serena/: project.yml
.seretos/: projects.yml
src/lib_python_config/: __init__.py  discovery.py  env.py  models.py  resolver.py  yaml_loader.py
tests/: test_discovery.py  test_env.py  test_resolver.py  test_yaml_loader.py
